--- a/server/.env
+++ b/server/.env
@@ -1,6 +1,7 @@
 PORT=5000
-MONGO_URI=mongodb+srv://srithivyanesan2002:0Oc4RauGqE8L3Ffc@cluster0.rufe3mm.mongodb.net/alertx?retryWrites=true&w=majority
+MONGO_URI=mongodb+srv://srithivyanesan2002:0Oc4RauGqE8L3Ffc@cluster0.rufe3mm.mongodb.net/alert-x?retryWrites=true&w=majority
 # JWT_SECRET=your_jwt_secret
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/alertx
 JWT_SECRET=your_jwt_secret
+JWT_EXPIRE=1h
