--- a/server/package.json
+++ b/server/package.json
@@ -19,7 +19,8 @@
     "expo-linear-gradient": "^14.1.4",
     "express": "^5.1.0",
     "jsonwebtoken": "^9.0.2",
-    "mongoose": "^8.15.1"
+    "mongoose": "^8.15.1",
+    "morgan": "^1.10.0"
   },
   "devDependencies": {
     "nodemon": "^3.1.10"
