--- a/server/.env
+++ b/server/.env
@@ -4,4 +4,5 @@ MONGO_URI=mongodb+srv://srithivyanesan2002:0Oc4RauGqE8L3Ffc@cluster0.rufe3mm.mon
 PORT=5000
 MONGO_URI=mongodb://localhost:27017/alertx
 JWT_SECRET=your_jwt_secret
-JWT_EXPIRE=20h
+JWT_EXPIRE=1d
+JWT_COOKIE_EXPIRE=7d
