--- a/server/.env
+++ b/server/.env
@@ -2,7 +2,9 @@ PORT=5000
 MONGO_URI=mongodb+srv://srithivyanesan2002:0Oc4RauGqE8L3Ffc@cluster0.rufe3mm.mongodb.net/alert-x?retryWrites=true&w=majority
 
 PORT=5000
-MONGO_URI=mongodb://localhost:27017/alertx
+# MONGO_URI=mongodb://localhost:27017/alertx
 JWT_SECRET=your_jwt_secret
 JWT_EXPIRE=7d
 JWT_COOKIE_EXPIRE=7d
+
+FRONTEND_URL=http://localhost:5173
